Change jacoco plugin configuration